# cpp-projects

./: .clang-format  .env  .gitignore  docker-compose.yaml
design_pattern/adapter/: CMakeLists.txt  build.sh  source.cpp
design_pattern/adapter/api_adapter/: CMakeLists.txt
design_pattern/adapter/api_adapter/include/: usb.h
design_pattern/adapter/usb_adapter/include/: usb.h
design_pattern/adapter/usb_adapter/src/: usb.cpp
design_pattern/decorator/: .gitignore  CMakeLists.txt  README.md  build.sh  source.cpp
design_pattern/decorator/gun_decorator/: CMakeLists.txt
design_pattern/decorator/gun_decorator/include/: gun.h
design_pattern/decorator/gun_decorator/src/: gun.cpp
design_pattern/decorator/text_decorator/: CMakeLists.txt
design_pattern/decorator/text_decorator/include/: text.h
design_pattern/decorator/text_decorator/src/: text.cpp
docker/: Dockerfile
login-system/: .gitignore  CMakeLists.txt
login-system/filehandler/: CMakeLists.txt
login-system/filehandler/include/: filehandler..h
login-system/src/: source.cpp
